# pokemon_tcg_research_agents

./: .gitignore  AGENT.md  PROJECT.md  main.py  pyproject.toml
config/: card_extraction_config.py  config.py  ebay_search_config.py
docs/: card_extraction.md  ebay_search.md
notebooks/: POC.ipynb  ebay_search.ipynb
src/tools/: card_extractor.py  ebay_search.py  research_tools.py
tests/: test_card_extractor.py  test_ebay_search.py
