[project]
name = "pokemon-research-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-search-results>=2.4.2",
    "python-dotenv>=1.2.2",
    "serpapi>=1.0.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
]

[tool.ruff.lint]
select = ["I"]
